tests/baselines/reference/thisInSuperCall.types
=== tests/cases/compiler/thisInSuperCall.ts ===
class Base { 
>Base : Base

    constructor(x: any) {}
>x : 任意
>类型别名 :=> 任意
}

class Foo extends Base {
>Foo : Foo
>Base : Base

    constructor() {
        super(this); // error: "super" has to be called before "this" accessing
>super(this) : 无值
>类型别名 :=> 无值
>super : 类为 Base
>this : 本体
    }
}

class Foo2 extends Base {
>Foo2 : Foo2
>Base : Base

    public p = 0;
>p : 数字
>类型别名 :=> 数字
>0 : 0

    constructor() {
        super(this); // error
>super(this) : 无值
>类型别名 :=> 无值
>super : 类为 Base
>this : 本体
    }
}

class Foo3 extends Base {
>Foo3 : Foo3
>Base : Base

    constructor(public p) {
>p : 任意
>类型别名 :=> 任意

        super(this); // error
>super(this) : 无值
>类型别名 :=> 无值
>super : 类为 Base
>this : 本体
    }
}
